# duckbridge

./: .coveragerc  .gitignore  CITATION.bib  Changelog.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: story-template.md
.github/workflows/: cd_pypi_publish.yml  ci_develop_branch_build.yml  ci_test_pypi_publish.yml  publish.yml  python-publish.yml
DuckBridge/: Changelog.md  README.md  render.yaml
DuckBridge/scripts/: start_duckbridge.py  stop_server.py
DuckBridge/src/duckbridge/: __init__.py
DuckBridge/src/duckbridge/client/: duckdb_client.py
DuckBridge/tests/server/: test_duckbridge_server.py  test_duckdb_server.py
DuckBridge/uml/: duckbridge_class_diagram.drawio
DuckDBServerWrapper/: Changelog.md  README.md  pyproject.toml  render.yaml
DuckDBServerWrapper/scripts/: start_duckbridge.py  stop_server.sh
DuckDBServerWrapper/src/duckdbserverwrapper/: __init__.py
DuckDBServerWrapper/src/duckdbserverwrapper/client/: client.py  duckdb_client.py
DuckDBServerWrapper/src/duckdbserverwrapper/constant/: constants.py
DuckDBServerWrapper/src/duckdbserverwrapper/extension/: duckdb_internal_server.py
DuckDBServerWrapper/src/duckdbserverwrapper/server/: duckdb_server.py  server.py
DuckDBServerWrapper/tests/: testInternalServer.py
DuckDBServerWrapper/tests/server/: test_duckdb_server.py
DuckDBServerWrapper/uml/: DuckDBServer.py_class_diagram.drawio
src/duckbridge/server/: duckbridge_server.py
tests/client/: test_duckbridge_client.py
tests/server/: test_duckbridge_server.py
uml/: duckbridge_class_diagram.drawio
(+4 files in other folders)
