[project]
name = "duckdbserverwrapper"
version = "0.2.0"
description = ""
authors = [
    {name = "Markian Hromiak",email = "markian.hromiak@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.3.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "duckdbserverwrapper", from = "src"}]


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
